--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
       <a class="action watch" href="">Watch</a>
     </div>
     <div class="board"></div>
-    <script src="main.js" type="module"></script>
+    <script src="main2.js" type="module"></script>
   </body>
 </html>
